<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.myapp.stranderdlog.enterDataManually"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meter_id"
        />
    <EditText
        android:id="@+id/meter_id_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:maxLength="12"
        android:inputType="number"
        android:hint="@string/Meter_id_ent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meter_reading"
        />
    <EditText
        android:id="@+id/meter_reading_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:maxLength="10"
        android:inputType="number"
        android:hint="@string/meter_reading_ent"/>

    <Button
        android:id="@+id/save_send_data_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_and_s"
        android:textAlignment="center"
        />


</LinearLayout>
